--- a/EventGuru02/Base.lproj/Main.storyboard
+++ b/EventGuru02/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Fahad-->
+        <!--Fahad-HomePage-->
         <scene sceneID="1ZC-L1-sOj">
             <objects>
-                <viewControllerPlaceholder storyboardName="Fahad" id="cYg-Hq-8p7" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Fahad-HomePage" id="cYg-Hq-8p7" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="Ixy-aw-qIm"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DW0-PR-L5z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -32,6 +32,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="uPS-xG-b18" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lKj-bk-4OK">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
