--- a/EventGuru02/Fahad/Fahad-HomePage.storyboard
+++ b/EventGuru02/Fahad/Fahad-HomePage.storyboard
@@ -16,23 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nYI-wl-7gJ">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nYI-wl-7gJ">
                                 <rect key="frame" x="16" y="59" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Exh-YK-Grb">
                                 <rect key="frame" x="177" y="59" width="200" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CGx-9c-dyl">
-                                <rect key="frame" x="16" y="130" width="361" height="629"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CGx-9c-dyl">
+                                <rect key="frame" x="0.0" y="130" width="393" height="629"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Kxy-L3-Cdq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CGx-9c-dyl" firstAttribute="top" secondItem="nYI-wl-7gJ" secondAttribute="bottom" constant="20" id="5gn-8d-VC9"/>
+                            <constraint firstItem="nYI-wl-7gJ" firstAttribute="leading" secondItem="Kxy-L3-Cdq" secondAttribute="leading" constant="16" id="LVb-Wy-xwy"/>
+                            <constraint firstItem="CGx-9c-dyl" firstAttribute="leading" secondItem="Kxy-L3-Cdq" secondAttribute="leading" id="T9x-a5-AdP"/>
+                            <constraint firstItem="CGx-9c-dyl" firstAttribute="trailing" secondItem="Kxy-L3-Cdq" secondAttribute="trailing" id="oc9-Rx-ImR"/>
+                            <constraint firstItem="Kxy-L3-Cdq" firstAttribute="bottom" secondItem="CGx-9c-dyl" secondAttribute="bottom" constant="10" id="rGP-ZF-e1H"/>
+                            <constraint firstItem="nYI-wl-7gJ" firstAttribute="top" secondItem="Kxy-L3-Cdq" secondAttribute="top" id="uyY-JA-qEK"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="tAx-9w-VNC"/>
                 </viewController>
@@ -52,6 +58,8 @@
                     <connections>
                         <segue destination="RhS-tR-DXT" kind="relationship" relationship="viewControllers" id="WP0-Jd-ACM"/>
                         <segue destination="gVy-lI-U0o" kind="relationship" relationship="viewControllers" id="FjR-c4-tO9"/>
+                        <segue destination="qio-yv-gce" kind="relationship" relationship="viewControllers" id="Vbz-9x-ziO"/>
+                        <segue destination="5Uw-El-6pB" kind="relationship" relationship="viewControllers" id="QIP-EH-BtU"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zII-PA-iMQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -85,12 +93,68 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mFV-vD-5N4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2477" y="323"/>
+            <point key="canvasLocation" x="2448" y="370"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="iGm-jl-8J0">
+            <objects>
+                <navigationController id="5Uw-El-6pB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.crop.circle" catalog="system" id="YRg-6S-pQx"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FtG-Ge-VNv">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="lYq-ex-iTf" kind="relationship" relationship="rootViewController" id="wDq-Os-hQr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hOG-W5-XMK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1724" y="1730"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="nHF-Jz-FZU">
+            <objects>
+                <viewControllerPlaceholder id="lYq-ex-iTf" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="c2U-Za-IIy"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0ct-qt-dAG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2587" y="1730"/>
+        </scene>
+        <!--Bookmark-->
+        <scene sceneID="d90-Y3-dcd">
+            <objects>
+                <navigationController id="qio-yv-gce" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Bookmark" image="bookmark" catalog="system" id="mGi-Q8-bfc"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qjE-Q6-Mmn">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eRO-aM-hme" kind="relationship" relationship="rootViewController" id="2G5-Km-J3p"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vc1-uO-WrQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1723" y="1070"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="hRk-7B-TWk">
+            <objects>
+                <viewControllerPlaceholder id="eRO-aM-hme" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="XT7-an-RmD"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SkN-3r-ggX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2495" y="1070"/>
         </scene>
     </scenes>
     <resources>
+        <image name="bookmark" catalog="system" width="110" height="128"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="person.crop.circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
